[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud/hud.gd" type="Script" id=1]
[ext_resource path="res://hud/empty_heart.png" type="Texture" id=2]
[ext_resource path="res://hud/heart.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "live",
"speed": 5.0
} ]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 132.0
margin_bottom = 56.0
color = Color( 0.152941, 0.152941, 0.152941, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 20.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 36.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 76.0
margin_bottom = 14.0
grow_vertical = 2
text = "Score: 0"
valign = 1

[node name="TimeLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 76.0
margin_bottom = 32.0
grow_vertical = 2
text = "Time: 00:00"
valign = 1

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -60.0
margin_right = 120.0
margin_bottom = -28.0
color = Color( 0.152941, 0.152941, 0.152941, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/CenterContainer"]
margin_left = 24.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 16.0

[node name="Control" type="Control" parent="ColorRect2/CenterContainer/HBoxContainer"]
margin_right = 16.0
rect_min_size = Vector2( 16, 0 )

[node name="Heart3" type="AnimatedSprite" parent="ColorRect2/CenterContainer/HBoxContainer/Control"]
frames = SubResource( 1 )
animation = "live"

[node name="Control2" type="Control" parent="ColorRect2/CenterContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
rect_min_size = Vector2( 16, 0 )

[node name="Heart2" type="AnimatedSprite" parent="ColorRect2/CenterContainer/HBoxContainer/Control2"]
frames = SubResource( 1 )
animation = "live"

[node name="Control3" type="Control" parent="ColorRect2/CenterContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 40.0

[node name="Heart1" type="AnimatedSprite" parent="ColorRect2/CenterContainer/HBoxContainer/Control3"]
frames = SubResource( 1 )
animation = "live"
